deployments/dev.backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdbw-backend
  namespace: rdbw-dev
  labels:
    app: rdbw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rdbw-backend
      tier: backend
  template:
    metadata:
      labels:
        app: rdbw-backend
        tier: backend
    spec:
      containers:
        - name: rdbw-backend
          image: cud64hfcidjdbvi9gjh4d.azurecr.io/rdbw-backend:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-keyvault-sync"
---
apiVersion: v1
kind: Service
metadata:
  name: rdbw-backend-cluster-service
  namespace: rdbw-dev
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: rdbw-backend
    tier: backend
