deployments/dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdbw
  namespace: rdbw-dev
  labels:
    app: rdbw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rdbw
      tier: frontend
  template:
    metadata:
      labels:
        app: rdbw
        tier: frontend
    spec:
      containers:
        - name: rdbw
          image: gvrtey54b5u7ybet.azurecr.io/rdbw-frontend:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rdbw-cluster-service
  namespace: rdbw-dev
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: rdbw
    tier: frontend
