deployments/prod.backend-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdbw-backend-admin
  namespace: rdbw-prod
  labels:
    app: rdbw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rdbw-backend-admin
      tier: backend
  template:
    metadata:
      labels:
        app: rdbw-backend-admin
        tier: backend
    spec:
      containers:
        - name: rdbw-backend-admin
          image: nxufkehscig5mqw9cdnbvur.azurecr.io/rdbw-backend:63
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-keyvault-sync"
---
apiVersion: v1
kind: Service
metadata:
  name: rdbw-backend-admin-cluster-service
  namespace: rdbw-prod
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: rdbw-backend-admin
    tier: backend
