deployments/prod.frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdbw
  namespace: rdbw-prod
  labels:
    app: rdbw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rdbw
      tier: frontend
  template:
    metadata:
      labels:
        app: rdbw
        tier: frontend
    spec:
      containers:
        - name: rdbw
          image: nxufkehscig5mqw9cdnbvur.azurecr.io/rdbw-frontend:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config/config.js
              subPath: config.js
          ports:
            - containerPort: 80
      volumes:
        - name: config-volume
          configMap:
            name: rdbw-frontend-config
---
apiVersion: v1
kind: Service
metadata:
  name: rdbw-cluster-service
  namespace: rdbw-prod
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: rdbw
    tier: frontend
