deployments/prod.backend-admin.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rdbw-backend-admin-ingress
  namespace: rdbw-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: internal-nginx
  rules:
    - host: api.example.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: rdbw-backend-admin-cluster-service
                port:
                  number: 80
